--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+.DiaryEditor {
+    display:flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.DiaryEditor textarea {
+    height: 300px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.DiaryItems {
+    background: #eee;
+    border-radius: 10px;
+    margin: 10px 10px 20px 10px;
+    padding: 20px 5px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.DiaryItems div:first-child {
+    padding-bottom:5px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #888;
 }
